SC - fixed liveview-loading height and z-index of user context menu
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/unionvms-web@13354 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/app/partial/header/header.less
+++ b/app/partial/header/header.less
@@ -235,6 +235,7 @@
             .dropdown-menu {
                 color:black;
                 border-radius: 1px;
+                z-index: 1052;
                 i{
                     color:@primaryColor;
                 }
