--- a/app/partial/spatial/spatial.less
+++ b/app/partial/spatial/spatial.less
@@ -400,3 +400,7 @@ div.td:extend(td all) {}
     background-color: @primaryColor;
     max-width: 125px;
 }
+
+.liveview-loading {
+	height: calc(~"100vh - 100px");
+}
